--- a/youtube.html
+++ b/youtube.html
@@ -4,27 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
+    <link rel="stylesheet" href="estilos/social.css">
     <style>
         
-        * {
-            margin: 0px;
-            padding: 0px;   
-            font-family: Arial, Helvetica, sans-serif;
-
-        }
-        img {
-
-        }
-
-        a {
-            display: block;
-            background-color: darkred;
-            padding: 20px;
-            color: white;
-            text-align: center;
-            font-weight: bolder;
-            text-decoration: none;
-        }
+       
     </style>
 </head>
 <body>
