--- a/instagram.html
+++ b/instagram.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>github</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="github">
-    <a href="https://github.com/EduardoL07" target="_blank">Meu GitHub</a>
+    <img src="imagens/tela-instagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/edu_lessa07/" target="_blank">Meu Instagram</a>
 </body>
 </html>
